--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.3.22-1~1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Robert James Clay <jame@rocasa.us>  Tue, 09 Oct 2012 16:01:01 -0400
+
 ledgersmb (1.3.21-2) unstable; urgency=low
 
   * Make indentation consistent in all maintainer scripts.
