--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,8 +1,8 @@
-ledgersmb (1.3.22-1) UNRELEASED; urgency=low
+ledgersmb (1.3.23~rc1-1~1) UNRELEASED; urgency=low
 
   * New upstream release.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 09 Oct 2012 16:14:51 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue, 09 Oct 2012 16:18:37 -0400
 
 ledgersmb (1.3.21-2) unstable; urgency=low
 
