--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,8 @@
-ledgersmb (1.3.23~rc1-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.23-1~2) UNRELEASED; urgency=low
 
   * New upstream release.
-  * Remove debian/patches/20_Makefile-PL.patch as it is not currently needed.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 09 Oct 2012 23:24:18 -0400
+ -- Robert James Clay <jame@rocasa.us>  Wed, 17 Oct 2012 16:52:23 -0400
 
 ledgersmb (1.3.21-2) unstable; urgency=low
 
