--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ledgersmb (1.2.26-1) UNRELEASED; urgency=low
+ledgersmb12 (1.2.26-1) UNRELEASED; urgency=low
 
   * Start packaging v1.2.26 release.
 
- -- Robert James Clay <jame@rocasa.us>  Mon, 30 Apr 2012 22:56:08 -0400
+ -- Robert James Clay <jame@rocasa.us>  Thu, 25 Apr 2012 07:59:22 -0500
 
 ledgersmb (1.2.25-2) experimental; urgency=low
 
