--- a/ledger-smb/branches/v1.2/debian/TODO
+++ b/ledger-smb/branches/v1.2/debian/TODO
@@ -1,5 +1,17 @@
+
+Correct this commit message to "Do not use dpkg-statoverride in debian/postinst
+to set permissions."
+
+svn ci -m "Do not use dpkg-statoverride in debian/statoverride to set permissions."
+Committed revision 361.
+
+----------------------------------------------------------------------------------
+
 debian/TODO for LedgerSMB v1.2
 
+- Change package name & installation directory to something that includes the 
+ version;  that way both 1.2 & 1.3 (& later, 1.4?) can be installed in parallel
+ on the same system.
 
 - Review updates & changes to v1.3, backport anything useful or needed for v.1.2
 
@@ -42,6 +54,7 @@ configuration is being installed automatically?
 - Update/expand the information provided in the debian/patches files.
 
 - As neccessary, add any other docs that could be registered to doc-base files.
+For instance, why isn't the README.sql-ledger file being installed?
 
 - Autoconfiguration for PostgreSQL and access to it by LedgerSMB
 
