--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-ledgersmb (1.3.23-1~2) UNRELEASED; urgency=low
+ledgersmb (1.3.23-1) unstable; urgency=low
 
   * New upstream release.
+  * Updated Standards-Version to 3.9.4 in debian/control, no changes needed.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 17 Oct 2012 16:52:23 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sun, 28 Oct 2012 16:17:30 -0400
 
 ledgersmb (1.3.21-2) unstable; urgency=low
 
