--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ledgersmb (1.3.24-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+  * Remove debian/patches/20_Makefile-PL.patch as it is not currently needed.
+
+ -- Robert James Clay <jame@rocasa.us>  Wed, 21 Nov 2012 13:30:14 -0500
+
 ledgersmb (1.3.23-1) unstable; urgency=low
 
   * New upstream release.
