--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
 ledgersmb (1.3.24-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Add new Japanese debconf translation. (Closes: #693146)
   * Remove debian/patches/20_Makefile-PL.patch as it is not currently needed.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 21 Nov 2012 13:30:14 -0500
+ -- Robert James Clay <jame@rocasa.us>  Wed, 21 Nov 2012 14:06:24 -0500
 
 ledgersmb (1.3.23-1) unstable; urgency=low
 
