--- a/debian/changelog
+++ b/debian/changelog
@@ -2,9 +2,11 @@ ledgersmb (1.3.24-1) UNRELEASED; urgency=low
 
   * New upstream release.
   * Add new Japanese debconf translation. (Closes: #693146)
-  * Remove debian/patches/20_Makefile-PL.patch as it is not currently needed.
+  * Changes to debian/patches/:
+    - Refresh 05_confdir.patch for new upstream release.
+    - Remove 20_Makefile-PL.patch as it is not currently needed.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 21 Nov 2012 14:06:24 -0500
+ -- Robert James Clay <jame@rocasa.us>  Wed, 21 Nov 2012 14:59:06 -0500
 
 ledgersmb (1.3.23-1) unstable; urgency=low
 
@@ -16,6 +18,7 @@ ledgersmb (1.3.23-1) unstable; urgency=low
 ledgersmb (1.3.21-2) unstable; urgency=low
 
   * Make indentation consistent in all maintainer scripts.
+  * Changes to debian/patches/:
   * Changes to debian/patches/:
     - Add 20_Makefile-PL.patch for a version reference issue in Makefile.PL.
     - Update 10_httpdconf.patch templates path to /var/lib/ledgersmb/templates.
