--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.25-1) UNRELEASED; urgency=low
+ledgersmb (1.3.25-1) unstable; urgency=low
 
   * New upstream release.
   * Add new Japanese debconf translation. (Closes: #693146)
@@ -6,7 +6,7 @@ ledgersmb (1.3.25-1) UNRELEASED; urgency=low
     - Refresh 05_confdir.patch for new upstream release.
     - Remove 20_Makefile-PL.patch as it is not currently needed.
 
- -- Robert James Clay <jame@rocasa.us>  Thu,  6 Dec 2012 07:55:59 -0500
+ -- Robert James Clay <jame@rocasa.us>  Sun, 09 Dec 2012 11:29:46 -0500
 
 ledgersmb (1.3.23-1) unstable; urgency=low
 
