--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ledgersmb (1.4.0~beta1-1~1) UNRELEASED; urgency=low
+
+  * Start development of v1.4 beta packages.
+
+ -- Robert James Clay <jame@rocasa.us>  Sat, 15 Dec 2012 13:36:12 -0500
+
 ledgersmb (1.3.25-1) unstable; urgency=low
 
   * New upstream release.
@@ -18,7 +24,6 @@ ledgersmb (1.3.23-1) unstable; urgency=low
 ledgersmb (1.3.21-2) unstable; urgency=low
 
   * Make indentation consistent in all maintainer scripts.
-  * Changes to debian/patches/:
   * Changes to debian/patches/:
     - Add 20_Makefile-PL.patch for a version reference issue in Makefile.PL.
     - Update 10_httpdconf.patch templates path to /var/lib/ledgersmb/templates.
