--- a/ledger-smb/branches/v1.3/debian/changelog
+++ b/ledger-smb/branches/v1.3/debian/changelog
@@ -1,8 +1,8 @@
-ledgersmb (1.3.25-2~1) UNRELEASED; urgency=low
+ledgersmb (1.3.27-1~1) UNRELEASED; urgency=low
 
-  * Start development for next package release.
+  * Development for next package release.
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 15 Dec 2012 13:24:57 -0500
+ -- Robert James Clay <jame@rocasa.us>  Sat, 05 Jan 2013 13:38:24 -0500
 
 ledgersmb (1.3.25-1) unstable; urgency=low
 
