--- a/ledger-smb/branches/v1.3/debian/changelog
+++ b/ledger-smb/branches/v1.3/debian/changelog
@@ -1,8 +1,8 @@
-ledgersmb (1.3.27-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.28-1~1) UNRELEASED; urgency=low
 
-  * Development for next package release.
+  * New upstream release.
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 05 Jan 2013 13:38:24 -0500
+ -- Robert James Clay <jame@rocasa.us>  Tue, 15 Jan 2013 10:16:38 -0500
 
 ledgersmb (1.3.25-1) unstable; urgency=low
 
