--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
 ledgersmb (1.3.28-1~1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Changes to debian/copyright:
+    - Update copyright end years as necessary to 2013.
+  * Changes to debian/rules:
+    - Remove line used to copy ledgersmb.conf.template, it is no longer needed.
+  * Add README.plack to file listing in debian/ledgersmb.docs file.
+  * Register the release notes using debian/ledgersmb.doc-base.notes.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 15 Jan 2013 10:16:38 -0500
+ -- Robert James Clay <jame@rocasa.us>  Tue, 15 Jan 2013 14:43:19 -0500
 
 ledgersmb (1.3.25-1) unstable; urgency=low
 
