--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,51 @@ Changelog for 1.3 Series
 Initial Release:  Monday, Oct 12 2011
 Supported Presently
 
+Changelog for 1.3.23
+* Fixed query string/stdin handling where both stdin and query string are set
+* Moved http error framework to use header methods (Chris T)
+* Fixed warning about incorrect method for ar/ap transactions (Chris T)
+* Fixed fatal gettext errors in ar_EG, fi, nb po's (Havard S)
+* Fixed prices being selected on RFQ (Chris T, h/t Erik H)
+* Fixed discount wrong after multiple parts selection (Chris T, h/T Istvan P)
+* Fixed action not found on redirect (Chris T, h/t Brian W)
+* Fixed issues upgrading from 1.2 if email and bcc are filled in (Chris T)
+* Fixed error exporting aging to csv (Havard S, h/t Nick P, 3559403)
+* Fixed receipt reversal screen erroring (Chris T, h/t Nick P)
+* Fixed select all button causing error on aging rpt (Chris T)
+* Fixed query err when generating sales orders from time cards (Erik H, 3559621)
+* Fixed backup does not test for failure (Havard S, h/t Nick P, 3574876)
+* prepre_company_database.sh now only gives user mgmt rights (Berend T)
+* Fixed end date, etc not showing on summary list, (Chris T, 3556279)
+
+Berend T is Berent Tober
+Chris T is Chris Travers
+Havard S is Havard Sorli
+Erik H is Erik Huelsmann
+Istvan P is Istvan Pongracz
+Brian W is Brian Wolf 
+Nick P is Nick Prater
+
+Changelog for 1.3.22
+* Fixed error when trying to save multiple make/models for a part (Chris T)
+* Better error handling when date is entered into statement balance (Chris T)
+* Added pricegroup selection back to entity credit account (Chris T, 3550056)
+* Fix for slow performance with Form->all_years (Chris T, h/t Neil S)[1]
+* Revamped database load test cases (Chris T)
+* Fixed error on some screens with function not found (Chris T)
+* Fixed some test case errors due to tests written against older API (Chris T)
+* Fixed error: parts search not loading into the db pn Pg 9.1 only (Chris T)
+
+Chris T is Chris Travers
+Neil S is Neil Smith
+
+Footnotes:
+[1]:  Problem found on database with approx 200k records spanning a number of
+years.  The current approach will do a sequential scan of acc_trans per year
+found if no index is there.  Adding the index is required to get this to
+perform reasonably well.
+
+
 Changelog for 1.3.21
 * Added a default numberformat in Form.pm (Chris T)
 * Added a container div for theming saved and/or posted docs (Chris T)
@@ -584,6 +629,13 @@ Database:
 Changelog for 1.2 Series
 Released 2007-04-04
 Currently supported, through at least 2012-03-01
+
+Changelog for 1.2.27
+* Corrected an issue with redirects (Turtle)
+
+Changelog for 1.2.26
+* Corrected is_zero errors updating ar/ap transactions (Chris T)
+* Corrected is_zero errors printing invoices (Chris T)
 
 Changelog for 1.2.25
 * Corrected sql injection issue (Chris T)
