--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.35~RC1-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.35-1~1) UNRELEASED; urgency=low
 
   * New upstream release.
   * Changes to debian/copyright:
@@ -14,7 +14,7 @@ ledgersmb (1.3.35~RC1-1~1) UNRELEASED; urgency=low
   * Add the libplack-perl package as a Suggests in debian/control.
   * Register the release notes using debian/ledgersmb.doc-base.notes.
 
- -- Robert James Clay <jame@rocasa.us>  Thu, 31 Oct 2013 05:49:31 -0400
+ -- Robert James Clay <jame@rocasa.us>  Wed,  5 Nov 2013 04:11:49 -0400
 
 ledgersmb (1.3.25-1) unstable; urgency=low
 
