--- a/ledger-smb/branches/v1.3/debian/changelog
+++ b/ledger-smb/branches/v1.3/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.35-1~2) UNRELEASED; urgency=low
+ledgersmb (1.3.36~rc2-1~1) UNRELEASED; urgency=low
 
   * New upstream release. (Closes: #732997)
   * Changes to debian/copyright:
@@ -17,7 +17,7 @@ ledgersmb (1.3.35-1~2) UNRELEASED; urgency=low
   * Add the libplack-perl package as a Suggests in debian/control.
   * Register the release notes using debian/ledgersmb.doc-base.notes.
 
- -- Robert James Clay <jame@rocasa.us>  Fri, 10 Jan 2014 13:45:30 -0500
+ -- Robert James Clay <jame@rocasa.us>  Wed, 15 Jan 2014 07:24:45 -0500
 
 ledgersmb (1.3.25-1) unstable; urgency=low
 
