--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.36~rc2-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.38-1~1) UNRELEASED; urgency=low
 
   * New upstream release. (Closes: #732997)
   * Changes to debian/copyright:
@@ -13,11 +13,10 @@ ledgersmb (1.3.36~rc2-1~1) UNRELEASED; urgency=low
   * Update packaging for installation of ledgersmb-httpd configuration for
     Apache v2.2 and v2.4.  (Closes: #725758) 
   * Add README.plack to the files listed in the debian/ledgersmb.docs file.
-  * Backport debian/adm/ledgersmb-httpd-2.4.conf from LedgerSMB v1.4.
   * Add the libplack-perl package as a Suggests in debian/control.
   * Register the release notes using debian/ledgersmb.doc-base.notes.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 15 Jan 2014 07:24:45 -0500
+ -- Robert James Clay <jame@rocasa.us>  Wed, 26 Feb 2014 07:51:45 -0500
 
 ledgersmb (1.3.25-1) unstable; urgency=low
 
