--- a/debian/TODO
+++ b/debian/TODO
@@ -1,5 +1,20 @@
 debian/TODO for LedgerSMB v1.3
 
+
+====================================================================================================
+
+
+- There is now nginx/fcgiwrap related info: contrib/nginx-fcgiwrap/. At least, add
+a reference to that information?
+
+- Add something about plack, fcgi support & libplack-perl to README.Debian; at
+  least to refer to the relevant readme.
+
+- An Ubuntu bug was submitted about setup.pl not working after selecting
+an automatic config during the install and setting a password:
+https://bugs.launchpad.net/bugs/1078817
+- Created a Debian bug for the same issue, # 698298, & pointed the ubuntu bug
+to that. Assigned the ubuntu bug to the Ubuntu LSMB team.
 - The dbconfig-common based database configuration that is being used during
 installations and upgrades needs to be reviewed and improved. It is capable
 of creating the 'ledgersmb' database administrative user but it is not getting
@@ -7,39 +22,47 @@ created with the necessary permissions. It is also apparently automatically
 creating a database named ledgersmb with the current way that user is being
 created, which is not really needed for the application.
 
-- Most of the upstream locale/po/* files need to be reviewed and/or updated;
-several of the files have fatal errors in them which need to be resolved.
+- http://i18n.debian.org/l10n-pkg-status/l/ledgersmb.html
+Which listed this:
+The following errors were found in ledgersmb 's PO files: 
+gettext: locale/po/es_AR.po:2500: duplicate message definition...
+locale/po/es_AR.po:248: ...this is the location of the first definition
+msgfmt: found 1 fatal error
+"Duplicate message definition in locale/po/es_AR.po"
+https://sourceforge.net/p/ledger-smb/bugs/1096/
 
-- Upstream uses pdflatex to create distribution LedgerSMB-manual.pdf from the
-source file doc/manual/LedgerSMB-manual.tex. Use the same source file to create
-an HTML version?
+- A debian/po debconf Japanese translation has been provided. Currently,
+there is no LSMB locale/po/ja.po file. Checked System|Lanaguage|List
+Languages in LSMB 1.3.25: "ja" is not in the default list. It's also not
+listed as an available language when editing templates, and presumably
+those lists come from the same source. It can be added manually using
+System|Language|Add Language.
+
+- Most of the upstream locale/po/* files, and also how they are referenced in
+debian/copyright, need to be reviewed and/or updated.  (LedgerSMB.pot was
+updated with LedgerSMB v1.3.27)
+
+- Upstream uses pdflatex to create the distribution LedgerSMB-manual.pdf from
+the source file doc/manual/LedgerSMB-manual.tex. Use the same source file to
+create an HTML version?
 
 - Create an HTML and/or PDF file of templateing/templating-guide.tex? And
 then register it with doc-base?
 
 - Add registration of at least database/ledgersmb.html to doc-base?
 
-- The doc/release-notes file is getting installed with the package; should it
-be referenced in README.Debian?
+- Add a section regarding the web server setup to README.Debian?
 
-- Add installation option for a versioned directory name? Or add a package
-build time option to create a versioned package name?
+- Add functionality in packaging to enable usage of nginx with LedgerSMB, 
+at least including the creation of an example configuration file.
+
+- Add an installation option for a versioned installation directory name?
+Or add a package build time option to create a versioned package name and
+installation? Or change to using at least binary package names that also
+include info about the version, like "ledgersmb13" or "ledgersmb1.4" or
+"ledgersmb-1.3"?
 
 - Review the tools/* shell and perl scripts to determine what changes may be
-necessary to make them usable on a Debian installation.
+necessary to make them usable on a Debian installation. 
 
-- New 1.3 version of LedgerSMB contains an embedded javascript library. The
-embedded version appears to be 1.8.2.  The library is available in Debian as the
-package libjs-scriptaculous:  v1.8.1 in lenny, v1.8.3 in lenny-backports and
-squeeze, v1.9.0 in wheezy and sid. Provide a Lintian override with description
-of issue, until otherwise resolved.
-  From Chris Travers in the Ledger-smb-devel mailing list:
-  "I don't know of any testing we have done on other versions.  We don't use a
-   lot of advanced stuff so I would expect it would work.  If bugs are found,
-   though, we can correct them."
-Test usage of libjs-scriptaculous and change over to using that when it is found
-to be operational with it.
--> Instead of patching the files that use it directly, try using dh_linktree to
-create the set of links to the debian packages?
-
- -- Robert James Clay <jame@rocasa.us>  Sat, 18 Aug 2012 10:18:31 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sun, 23 Mar 2014 04:37:52 -0500
