--- a/debian/changelog
+++ b/debian/changelog
@@ -1,22 +1,28 @@
-ledgersmb (1.3.38-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.38-1~3) UNRELEASED; urgency=low
 
   * New upstream release. (Closes: #732997)
   * Changes to debian/copyright:
-    - Update copyright end years as necessary to 2013.
+    - Update copyright end years as necessary to 2014.
+    - Add an entry for utils/notify_short/.*pl and it README file.
     - Add an entry for the tools/prepare-company-database.* scripts.
+  * Changes to debian/control:
+    - Update Standards-Version in debian/control.
+    - Add the libplack-perl package as a Suggests.
   * Changes to debian/rules:
     - Add line to make tools/system/lsmb* scripts executables.
     - Remove the line used to copy the ledgersmb.conf.template file as it is
       no longer needed.
   * Changes to debian/patches/:
     - Add 20_BashPath.patch to resolve bash path issues in tools/ scripts.
+    - Add 21_lsmb_13-fcgi-conf.patch for setting directory its paths.
   * Update packaging for installation of ledgersmb-httpd configuration for
-    Apache v2.2 and v2.4.  (Closes: #725758) 
-  * Add README.plack to the files listed in the debian/ledgersmb.docs file.
-  * Add the libplack-perl package as a Suggests in debian/control.
+    Apache v2.2 and v2.4. (Closes: #725758) 
+  * Changes to debian/ledgersmb.docs:
+   - Add README.git to the installed documents list.
+   - Add README.plack to the installed documents list.
   * Register the release notes using debian/ledgersmb.doc-base.notes.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 26 Feb 2014 07:51:45 -0500
+ -- Robert James Clay <jame@rocasa.us>  Tue, 25 Mar 2014 00:12:59 -0400
 
 ledgersmb (1.3.25-1) unstable; urgency=low
 
