--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.38-1~3) UNRELEASED; urgency=low
+ledgersmb (1.3.39~rc2-1~1) UNRELEASED; urgency=low
 
   * New upstream release. (Closes: #732997)
   * Changes to debian/copyright:
@@ -22,7 +22,7 @@ ledgersmb (1.3.38-1~3) UNRELEASED; urgency=low
    - Add README.plack to the installed documents list.
   * Register the release notes using debian/ledgersmb.doc-base.notes.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 25 Mar 2014 00:12:59 -0400
+ -- Robert James Clay <jame@rocasa.us>  Wed, 26 Mar 2014 00:22:12 -0400
 
 ledgersmb (1.3.25-1) unstable; urgency=low
 
