--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.39~rc3-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.39-1~1) UNRELEASED; urgency=low
 
   * New upstream release. (Closes: #732997)
   * Changes to debian/copyright:
@@ -22,7 +22,7 @@ ledgersmb (1.3.39~rc3-1~1) UNRELEASED; urgency=low
    - Add README.plack to the installed documents list.
   * Register the release notes using debian/ledgersmb.doc-base.notes.
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 29 Mar 2014 08:31:22 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue,  1 Apr 2014 08:17:31 -0400
 
 ledgersmb (1.3.25-1) unstable; urgency=low
 
