--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.39-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.39-1~2) UNRELEASED; urgency=low
 
   * New upstream release. (Closes: #732997)
   * Changes to debian/copyright:
@@ -13,6 +13,8 @@ ledgersmb (1.3.39-1~1) UNRELEASED; urgency=low
     - Remove the line used to copy the ledgersmb.conf.template file as it is
       no longer needed.
   * Changes to debian/patches/:
+    - Add usage of 'Last-Update' field in all *.patch files.
+    - Update default 'contrib-dir' to be for Pg 9.3 in 05_confdir.patch.
     - Add 20_BashPath.patch to resolve bash path issues in tools/ scripts.
     - Add 21_lsmb_13-fcgi-conf.patch for setting directory its paths.
   * Update packaging for installation of ledgersmb-httpd configuration for
@@ -22,7 +24,7 @@ ledgersmb (1.3.39-1~1) UNRELEASED; urgency=low
    - Add README.plack to the installed documents list.
   * Register the release notes using debian/ledgersmb.doc-base.notes.
 
- -- Robert James Clay <jame@rocasa.us>  Tue,  1 Apr 2014 08:17:31 -0400
+ -- Robert James Clay <jame@rocasa.us>  Thu,  3 Apr 2014 11:56:31 -0400
 
 ledgersmb (1.3.25-1) unstable; urgency=low
 
