--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,41 +1,19 @@
-ledgersmb (1.3.21-2) unstable; urgency=low
+ledgersmb (1.3.39-1) unstable; urgency=low
 
   Language specific HTML, LaTeX, and Text templates can be edited online but
-  the language specific directory, like /var/ledgersmb/templates/demo/en_US,
-  first needs to be manually created.
+  the language specific directory (like /var/ledgersmb/templates/demo/en_US)
+  first needs to be manually created and the template file copied there.
 
- -- Robert James Clay <jame@rocasa.us>  Sun, 26 Aug 2012 09:49:25 -0400
-
-ledgersmb (1.3.18-1) unstable; urgency=low
-
-  Empty language specific HTML, LaTeX, and Text directories are no longer being
-  installed with the package. In order to edit templates online for a particular
-  language; create the language specific directory, like templates/demo/en_US,
-  then manually copy the default version of the template to that directory.
-
-  The application css directory is /var/lib/ledgersmb/css and the default files
-  for it are now installed there from the example files during an initial package
-  install. There is also a new URL related configuration item in ledgersmb.conf,
-  cssdir, which will need to be updated manually when upgrading from a previous
-  version.
-
- -- Robert James Clay <jame@rocasa.us>  Sun, 10 Jun 2012 18:25:17 -0400
-
-ledgersmb (1.3.17-1) unstable; urgency=low
-
-  The templates directory is now at /var/lib/ledgersmb/templates instead of
-  being at /etc/ledgersmb/templates. For upgrades, the templates path in
-  /etc/ledgersmb/ledgersmb.conf will need to be updated manually.
-
- -- Robert James Clay <jame@rocasa.us>  Sat, 02 Jun 2012 20:17:26 -0400
-
-ledgersmb (1.3.16-1) unstable; urgency=low
-
-  Now have experimental dbconfig/debconf usage for configuring LedgerSMB during
-  the package installation.  Because it is experimental, the default is to not
-  use it;  instead what can be done is to manually create the ledgersmb database
+  An experimental dbconfig/debconf for configuring LedgerSMB during the package
+  installation is available. Because it is experimental, the default is to not
+  use it; instead what can be done is to manually create the ledgersmb database
   user and use that in the http://localhost/ledgersmb/setup.pl script to create
   the company databases for use. More information regarding this is available
   in /usr/share/doc/ledgersmb/README.Debian.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 08 May 2012 08:49:46 -0400
+  The contrib_dir configuration in /etc/ledgersmb/ledgersmb.conf now defaults
+  to being for Postgresql 9.3, and should be updated if being used with a
+  different version.
+
+ -- Robert James Clay <jame@rocasa.us>  Sat, 05 Apr 2014 13:27:08 -0400
+
